[package]
name = "snec"
version = "1.0.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/snec/*/snec"
repository = "https://github.com/kotauskas/snec.rs"

description = "Configuration system with compile-time field lookup and modification notifications"

categories = ["config"]
keywords = ["config"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snec_macros = {version = "1.0", path = "./macros", optional = true}

[features]
default = ["std", "macros"]
std = []
macros = ["snec_macros"]