[package]
name = "snec_macros"
version = "0.1.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"

description = "Macros for the Snec crate, intended to be used via Snec's reexports"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
fehler = "1.0"
proc-macro2 = "1.0"
smallvec = "1.4"